--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="nav_inventory">Inventory</string>
     <string name="nav_shopping_list">Shopping List</string>
     <string name="nav_meals">Meals</string>
-    <string name="nav_user">Users</string>
+    <string name="nav_users">Users</string>
     <string name="nav_add_to_inventory">Add to Inventory</string>
     <string name="nav_user_parameters">User Parameters</string>
     <string name="nav_settings">Settings</string>
